# uca-phantom

./: CHANGELOG.md  CMakeLists.txt  README.md  meson.build  uca-phantom-camera.c  uca-phantom-camera.h
docs/: conf.py  index.rst  memread.rst  quickstart.rst  trigger.rst
docs/_build/doctrees/: connection.doctree  environment.pickle  example.doctree  index.doctree  memread.doctree  quickstart.doctree  trigger.doctree
docs/_build/html/: .buildinfo  connection.html  example.html  genindex.html  index.html  memread.html  objects.inv  quickstart.html  search.html  searchindex.js  trigger.html
docs/_build/html/_sources/: connection.rst.txt  example.rst.txt  memread.rst.txt  trigger.rst.txt
docs/_build/html/_static/: documentation_options.js
utils/: _mock  mock  mock.py  test.py  test_concert.py
